25-04-19

XML work to export to a directory and for the XML to reference the XLSX file by name

23-04-19

NPE bug fix

18-04-19

Instead of base 64 hashes use simple digits

15-04-19

More flexible file prefixes in XML export

15-04-19

Better xlsx file names in XML zip download

12-04-19

New file type functionality, files with a type are flagged, move with backups, and can be seen for download by normal users

03-04-19

Adjustment to how report categories are stored in backups

02-04-19

Changes to XML file name generation for Broaksure

29-03-19

xls libreoffice convert - requires libreoffice to be installed

27-03-19

'asglobal' works with 'where (' statements

better feedback on number of lines rejected

Bug fixes and better session management on the Excel plugin

12-03-19

Report Category work

07-03-19

Validation option on import templates should mean no validations run on a vanilla import

Can set report categories (though they are not read yet) and bug fix when uploading databases without templates

06-03-19

Add apache commons codec back in, XML scanning of files back from brokasure, standard user upload. Rename contextual menu Debug to Derivation.

27-02-19

Reports with the same name will overwrite, Brokasure XML export and import work

26-02-19

encode all of the json or newer versions of tomcat will complain in js tree

bug fix which will refresh the permissions even when looking up a user that's logged in previously, this needs work

21-02-19

new syntax of 'applies to'. If a single name is specified (e.g. `Contract Reference` - this is now taken to mean `Contract reference` level lowest

Tidying, bug fix to batch importer when name for attribute in composite is blank, bug fix when deleting databases, started on report based use of dictionary, Excel controller doensn't show the home menu as a linkable menu

'valueset' adjusted to ignore attribute headings, and use pre-compiled set on the dataRegionHeading if available
