@@ -21,7 +21,6 @@ linux-8bsg.logonpageoverride=edbroking_login
 linux-8bsg.logonpagecolour=#eded24
 linux-8bsg.logonpagemessage=
 # very specific to Ed Broking -
-linux-8bsg.bsinboxpath=\\\\uk.cg-sc.org\\fs\\BSX\\AzquoUAT\\Import\\
 
 
 # Bill's new machine 2017
@@ -71,8 +70,6 @@ gzksd-azq01.groovydir=/home/CawleyE/groovy
 gzksd-azq01.xmlscandir=/mnt/BSX/outbox
 gzksd-azq01.xmlscandb=Risk Solutions
 gzksd-azq01.xmldestinationdir=/mnt/BSX/inbox
-# very specific to Ed Broking -
-gzksd-azq01.bsinboxpath=\\\\uk.cg-sc.org\\fs\\BSX\\AzquoUAT\\Import\\
 
 
 # Ed Broking windows dev server
@@ -101,8 +98,6 @@ gzksu-azq01.groovydir=/home/CawleyE/groovy
 gzksu-azq01.xmlscandir=
 gzksu-azq01.xmlscandb=Risk Solutions
 gzksu-azq01.xmldestinationdir=/mnt/BSX/inbox
-# very specific to Ed Broking -
-gzksu-azq01.bsinboxpath=\\\\uk.cg-sc.org\\fs\\BSX\\AzquoUAT\\Import\\
 
 # Ed broking prod
 gzksp-azq01.azquo.home=/home/CawleyE
@@ -118,5 +113,3 @@ gzksp-azq01.groovydir=/home/CawleyE/groovy
 gzksp-azq01.xmlscandir=
 gzksp-azq01.xmlscandb=Risk Solutions
 gzksp-azq01.xmldestinationdir=/mnt/BSX/inbox
-# very specific to Ed Broking -
-gzksp-azq01.bsinboxpath=\\\\uk.cg-sc.org\\fs\\BSX\\AzquoUAT\\Import\\
